--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,45 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body{
+  width: 100vw;
+  height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-content: center;
 }
+*{
+  box-sizing: border-box;
+}
+.container{
+  text-align: center;
+  width:80vw;
+  max-width:500px;
 
-.App-link {
-  color: #61dafb;
 }
+.todo-flex{
+  width: 100%;
+  border:1px solid black;
+  padding: 1em;
+  display: flex;
+  justify-content: space-between;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  margin: 1em 0;
 }
+.todo-flex p{
+  margin: 0;
+  padding: 0;
+  text-transform: capitalize;
+  color: blue;
+ }
+ .delete{
+   font-weight: 800;
+   cursor: pointer;
+ }
+ button{
+   background-color: blue;
+   outline:none;
+   border:none;
+   padding: 1em;
+   cursor: pointer;
+   margin: 1em;
+   color: white;
+   
+ }
